--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,10 +9,10 @@
   <h1>{{month}} {{day}}</h1>
 
   <!--Clock in/clock out buttons-->
-  <button [disabled]="working" type="button" class="btn btn-success btn-block" (click)="clockIn()">Clock In</button>
+  <button ion-button large block color="secondary" [disabled]="working" (click)="clockIn()">Clock In</button>
   <p *ngIf="on">You clocked in at: {{clockInTime}}</p>
 
-  <button [disabled]="!working" type="button" class="btn btn-danger btn-block" (click)="clockOut()">Clock Out</button>
+  <button ion-button large block color="danger" [disabled]="!working" (click)="clockOut()">Clock Out</button>
   <p *ngIf="off">You clocked in at: {{clockOutTime}}</p>
   <p *ngIf="off">You worked for: {{hoursWorked}} hours</p>
 </ion-content>
